--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "eslint-config-google": "^0.12.0",
     "eslint-plugin-react": "^7.12.4"
   },
-  "homepage": "https://sandraz.github.io/repo-name"
+  "homepage": "https://sandrazheng97.github.io/website"
 }
