Move CNAME to public

--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
   },
   "homepage": "https://sandrazheng97.github.io",
   "gh-pages-deploy": {
-    "cname": "sandrazheng97.com"
+    "cname": "sandrazheng.com"
   }
 }
