--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-resize-detector": "^4.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-sizeme": "^2.6.7"
+    "react-sizeme": "^2.6.7",
+    "react-slick": "^0.24.0"
   },
   "scripts": {
     "start": "react-scripts start",
