--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-resize-detector": "^4.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-simple-dropdown": "^3.2.3",
     "react-sizeme": "^2.6.7",
     "react-slick": "^0.24.0"
   },
